whereami-mesh/whereami-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: whereami-gateway
  namespace: frontend
spec:
  selector:
    asm: asm-ingressgateway
    app: asm-ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: edge2mesh-credential
